--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,8 @@ body{
 {
     color: #fe424d;
     font-size : 1.5rem;
-    text-decoration: none;    
+    text-decoration: none; 
+    background-color: blue;   
 }
 
 .nav-link{
