--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,9 +1,4 @@
 
-
-
-
-
-
 <nav class="navbar navbar-expand-md border-bottom bg-body-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand-coustom " href="/listings"><i class="fa-regular fa-compass"></i> AirBnb &nbsp; &nbsp;</a>
@@ -15,7 +10,7 @@
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="height: 275px; background-color: white;">
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="/listings">Explore all</a>
         </div>
